fix bug broken layout for Job listing page

--- a/src/main/webapp/assets/sass/freelancer.sass
+++ b/src/main/webapp/assets/sass/freelancer.sass
@@ -267,6 +267,11 @@
           text-align: right
           img
             max-width: 130px
+          a
+            clear: both
+            display: inline-block
+            width: 100%
+            padding-top: 5px
         h3
           font-size: 16px
           font-weight: 400
