--- a/src/main/webapp/assets/sass/home.sass
+++ b/src/main/webapp/assets/sass/home.sass
@@ -783,6 +783,7 @@
                                 float: left
                                 display: inline-block
                                 line-height: 18px
+                                padding-top: 5px
                         strong
                             font-weight: 500
                         .right-content
